@@ -8,7 +8,8 @@ rvm:
 script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
 branches:
   only:
-    master
+    - master
+    - devel
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
